css/style.css
body, html {
    padding: 0;
    width: 100%;
    height: 100%;
    font-family: Helvetica, sans-serif;
    max-width: 1200px; /* Optional: Set a max width for larger screens */
    align-items: center;
    justify-content: center;
    margin: 0 auto;
}

.page-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    background: linear-gradient(to bottom, rgb(19, 15, 24), rgb(41, 32, 50)); /* Gradient from top to bottom */
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Add shadow along the sides */

}

a {
    text-decoration: none;
    color: rgb(60, 136, 168);
}

a:hover {
    text-decoration: underline;
}

body h1 {
    font-size: 2rem;
    margin: 1rem 0; /* Specify margin for h1 elements */
}

hr {
    border: 0;
    height: 2px;
    background: #ccc;
    margin: 4% 8% 0 8%;
}

/* TOP-BANNER */
#banner {
    position: fixed;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 100%;
    max-width: 1200px; /* Match the max-width of the wrapper */
    height: 80px; /* Adjust height as needed */
    padding-top: 10px;
    padding-bottom: 10px;
    background-color: rgba(60, 136, 168, 1); /* needed */
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 1000;
    box-sizing: border-box; /* Include padding within the width */    
    border-bottom: 2px solid rgb(230, 119, 72);
}

#banner img {
    display: flex;
    max-height: 100%;
    padding-left: 5%;
    padding-right: 5%;
}

#banner a:hover {
    text-decoration: none;
}

/* NAVIGATION */
nav {
    display: flex;
    align-items: center;
    padding-right: 4%;
}

nav a {
    color: black;
    text-decoration: none;
    padding: 8px 16px;
    display: inline-block;
}

nav a:hover, nav a.active {
    background-color: rgba(230, 119, 72, 1);
    color: white;
}


/* SECTION DEFINITIONS */
#home {
    background: linear-gradient(to bottom, rgba(60, 136, 168, 1), rgb(38, 109, 140)); /* Gradient from top to bottom */
    height: 100vh; /* Full viewport height */
    width: 100%; /* Full width */
}

#services {
    width: 100%;
}

#portfolio {
    padding-top: 40px;
    width: 100%;
    background-color: white;
}

#contact {
    padding-top: 40px;
    width: 100%;
    height: calc(100vh - 120px); /* Adjust height to include the top banner, as well as padding */
    background-color: white;
    position: relative; /* Ensure the pseudo-element is positioned relative to the section */
}

#pricing {
    padding-top: 40px;
    width: 100%;
    height: calc(100vh - calc(120px + 30px)); /* Adjust height to include the top banner, as well as padding, and the footer */
    background-color: white;
}

#border { /* line dividing the sections */
    width: 100%;
    height: auto; 
    background-color: white;
}

#footer { /* thin strip at the very bottom */
    width: 100%;
    height: 30px; /* Adjust height as needed */
    background-color: rgba(60, 136, 168, 1); /* Set background color */
    color: rgb(74, 74, 74);
    max-width: 1200px; /* Match the max-width of the wrapper */
    display: flex;
    z-index: 1000;
    box-sizing: border-box; /* Include padding within the width */
    border-top: 2px solid rgb(230, 119, 72);
}

/* Highlight styling */
.highlight {
    color: rgb(230, 119, 72); /* Color for the first word */
}



/* LAYOUT OF HOME PAGE */
.home-page {
    display: flex;
    height: 100vh;
}

.home-container {
    display: grid;
    grid-template-rows: 80px 1fr auto;
    width: 100%;
    height: 100%;
    gap: 10px; /* Add space between grid boxes */
}

.top-row {
    background-color: #f0f0f0;
}

.content-row {
    display: grid;
    grid-template-columns: 1fr 2fr;
    align-items: start;
    gap: 1rem; /* Add space between columns in this row */
    padding-top: 30%; /* Determine the space between the top of the container and the content */
    transform: translateX(-4%); /* Adjust the position of the content */
} 

.photo {
    text-align: right;
}

.photo img {
    max-width: 50%;
    height: auto;
}

.intro-text {
    padding-right: 4%;
}

.intro-text h1 {
    line-height: 0; 
    font-size: 1.5rem !important;

}

.name-highlight {
    line-height: 0.5;
    color: rgba(38, 30, 48, 0.9); 

}

.degree-highlight {
    color: rgb(230, 119, 72); /* Set the color to orange */
}

.intro-text p {
    line-height: 1.5;
    font-size: 1rem !important;
    color: white;
}

.intro-text button {
    border: none; /* Remove border */
    border-radius: 0; /* Remove border-radius */
    background-color: rgb(230, 119, 72); /* Set background color */
    color: white; /* Set text color */
    padding: 0.5rem 1rem; /* Add padding */
    font-size: 1.5rem !important; /* Set font size */
    cursor: pointer; /* Change cursor to pointer */
    outline: none; /* Remove outline */
    display: inline-flex; /* Use inline-flex to align icon and text */
    align-items: center; /* Center items vertically */
    text-align: center; /* Center text */
    line-height: normal; /* Reset line-height */
    letter-spacing: 2px; /* Add letter spacing */
}

.button-icon {
    height: 1em; /* Set height to match the font size */
    margin-right: 0.5rem; /* Add space between icon and text */
    filter: invert(100%); /* Invert colors */
    transform: translateY(0.1em); /* Adjust vertical alignment */
}

.intro-text button:focus {
    outline: none; /* Remove focus outline */
}

.intro-text button:active {
    transform: scale(0.98); /* Slightly scale down on click */
}


.arrow-down {
    text-align: right;
    padding-right: 4%; /* Reduced padding */
    padding-bottom: 2%;
    /* border: 1px solid #ccc; Border for visualization */
}

.arrow-down img {
    width: 2rem; /* Adjust size as needed */
    height: auto;
}

.logo {
    width: 24px; /* Adjust size as needed */
    height: auto;
    cursor: pointer;
    padding-bottom: 2%;
    transform: translateX(-200%);
}
/* ... */

